--- a/mastermind/templates/mastermind/game_admin.html
+++ b/mastermind/templates/mastermind/game_admin.html
@@ -5,6 +5,8 @@
 
 <form method="post">{% csrf_token %}
 
+<p>Status: {{ form.mode }}</p>
+
 <p><input type="submit" value="Gem ændringer" /></p>
 
 <h2>Indgange</h2>
